# ipab_controller_msgs

./: CMakeLists.txt  README.md  package.xml
include/ipab_controller_msgs/: conversions.h
msg/: ContactMap.msg  EffortFeedforwardWithJointFeedback.msg  EffortFeedforwardWithJointFeedbackTrajectory.msg  FeedbackPolicy.msg
