<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ipab_controller_msgs</name>
  <version>0.0.1</version>
  <description>Commonly used messages for controllers.</description>

  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <author email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</author>
  <license>BSD</license>

  <url type="repository">https://github.com/ipab-slmc/ipab_controller_msgs</url>
  <url type="bugtracker">https://github.com/ipab-slmc/ipab_controller_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
